# MTG-Card-Scanner-Sorter

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  settings.json
.github/workflows/: build.yml
AI Model Data/Results/: results.csv
GCODE Files - NOT FOR FLASK/: README.txt
GCODE Files - NOT FOR FLASK/Printer Models/: base_2_start_stack.3mf  base_guide.3mf  card_knocker.3mf  phone_holder_and_tube_guide.3mf  phone_lock_bracket.3mf  suction_head.3mf
GCODE Files - NOT FOR FLASK/Syringe Push and Pull Module/: anti_flex_plate.3mf  crank_shaft.3mf  gear_1_to_stepper.3mf  gear_2_intermediate.3mf  gear_3_crank.3mf  stepper_gear_base.3mf  syringe_base.3mf  syringe_plunger_adapter.3mf
Klipper Printer Files - NOT FOR FLASK/: printer.cfg
docs/: settings_manual.md
src/: settings.json
src/history/: 1759710912655.json  1759710972139.json  1759822546989.json  1759822611182.json  1759822671479.json  1759822729356.json  1759822788514.json  1760387724431.json  1760387784432.json  1760387843349.json  1760387902391.json  1760387962392.json  1760388022334.json  1760388078552.json  1760388136143.json  1760388194606.json  1760388252651.json  1760388309863.json  1760388369310.json  1761601050668.json  1761601109085.json  1761601167538.json  1761601225418.json  1761601284857.json  1761601343205.json  1761601401571.json  1761601460200.json  1761601517627.json  1761601577139.json  1761601633992.json  1761601693196.json  1761601753223.json  1761601813184.json  1761601871496.json  1761601929700.json  1761601987591.json  1761602047224.json  1761602106246.json  (+36 more)
(+8 files in other folders)
